--- a/index.html
+++ b/index.html
@@ -10,31 +10,25 @@
 
   <title>Frontend Mentor | Recipe page</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution {
-      font-size: 11px;
-      text-align: center;
-    }
-
-    .attribution a {
-      color: hsl(228, 45%, 44%);
-    }
-  </style>
+  <link rel="stylesheet" href="./src/css/reset.css">
+  <link rel="stylesheet" href="./src/css/variables.css">
+  <link rel="stylesheet" href="./src/css/styles.css">
+  <link rel="stylesheet" href="./src/css/responsive.css">
 </head>
 
-<body>
-  <section class="container">
-    <img src="./src/assets/images/image-omelette.jpeg" alt="Imagem do Omelette">
-    <h1 class="title">Simple Omelette Recipe</h1>
-    <p>An easy and quick dish, perfect for any meal. This classic omelette combines beaten eggs cooked to perfection,
-      optionally filled with your choice of cheese, vegetables, or meats.</p>
+<body class="container">
+  <section class="recipe-omelette">
+    <img src="./src/assets/images/image-omelette.jpeg" alt="Imagem do Omelette" class="image">
+    <section class="home">
+      <h1 class="title">Simple Omelette Recipe</h1>
+      <p>An easy and quick dish, perfect for any meal. This classic omelette combines beaten eggs cooked to perfection, optionally filled with your choice of cheese, vegetables, or meats.</p>
+    </section>
     <section class="preparation-time">
       <h3>Preparation time</h3>
       <ul>
-        <li>Total: Approximately 10 minutes</li>
-        <li>Preparation: 5 minutes</li>
-        <li>Cooking: 5 minutes</li>
+        <li><strong>Total:</strong> Approximately 10 minutes</li>
+        <li><strong>Preparation:</strong> 5 minutes</li>
+        <li><strong>Cooking:</strong> 5 minutes</li>
       </ul>
     </section>
     <section class="ingredients">
@@ -50,12 +44,18 @@
     <section class="instructions">
       <h2>Instructions</h2>
       <ol>
-        <li><strong>Beat the eggs:</strong> In a bowl, beat the eggs with a pinch of salt and pepper until they are well mixed. You can add a tablespoon of water or milk for a fluffier texture.</li>
-        <li><strong>Heat the pan:</strong> Place a non-stick frying pan over medium heat and add butter or oil.</li>
-        <li><strong>Cook the omelette:</strong> Once the butter is melted and bubbling, pour in the eggs. Tilt the pan to ensure the eggs evenly coat the surface.</li>
-        <li><strong>Add fillings (optional):</strong> When the eggs begin to set at the edges but are still slightly runny in the middle, sprinkle your chosen fillings over one half of the omelette.</li>
-        <li><strong>Fold and serve:</strong> As the omelette continues to cook, carefully lift one edge and fold it over the fillings. Let it cook for another minute, then slide it onto a plate.</li>
-        <li><strong>Enjoy:</strong> Serve hot, with additional salt and pepper if needed.</li>
+        <li><p class="list">
+          <strong>Beat the eggs:</strong> In a bowl, beat the eggs with a pinch of salt and pepper until they are well
+          mixed. You can add a tablespoon of water or milk for a fluffier texture.
+        </p></li>
+        <li><p class="list"><strong>Heat the pan:</strong> Place a non-stick frying pan over medium heat and add butter or oil.</p></li>
+        <li><p class="list"><strong>Cook the omelette:</strong> Once the butter is melted and bubbling, pour in the eggs. Tilt the pan
+          to ensure the eggs evenly coat the surface.</p></li>
+        <li><p class="list"><strong>Add fillings (optional):</strong> When the eggs begin to set at the edges but are still slightly
+          runny in the middle, sprinkle your chosen fillings over one half of the omelette.</p></li>
+        <li><p class="list"><strong>Fold and serve:</strong> As the omelette continues to cook, carefully lift one edge and fold it over
+          the fillings. Let it cook for another minute, then slide it onto a plate.</p></li>
+        <li><p class="list"><strong>Enjoy:</strong> Serve hot, with additional salt and pepper if needed.</p></li>
       </ol>
     </section>
     <section class="nutrition">
@@ -86,7 +86,7 @@
 
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="https://www.frontendmentor.io/profile/WellissonLima">Wellisson Lima</a>.
   </div>
 </body>
 
